# pg-corte-plano

./: CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Light.cpp  Material.cpp  Material.h  Matrix.h  Matrix4.cpp  Matrix4.h  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  README.md  SDLReader.cpp  SDLReader.h  Scene.cpp  Scene.h  Triangle.cpp  Triangle.h  Util.h  Vetor.cpp  exemplo.sdl  main  main.cpp  vetor.h
P2-Objs/: casa.byu  cubao.byu  teste.byu  yoda.byu
data/: calice.sdl  casa.sdl  cubao.sdl  gato.sdl  objeto.byu  plano.txt
include/: Camera.h  Color.h  Light.h  Material.h  Matrix4.h  Mesh.h  Plane.h  SDLReader.h  Scene.h  Triangle.h  Util.h  Vetor.h
src/: Camera.cpp  Color.cpp  Material.cpp  Mesh.cpp  Plane.cpp  SDLReader.cpp  Scene.cpp  Triangle.cpp  main.cpp
